--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,13 @@ php:
   - 5.4
   - 5.5
 
+env:
+    - WP_VERSION=latest WP_MULTISITE=0
+    - WP_VERSION=latest WP_MULTISITE=1
+    - WP_VERSION=3.3.0 WP_MULTISITE=0
+    - WP_VERSION=3.3.0 WP_MULTISITE=1
+
+before_script:
+    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+
 script: phpunit
